--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@faker-js/faker": "^7.2.0",
     "@sanity/client": "^3.3.2",
+    "ethers": "^5.6.9",
     "mapbox-gl": "^2.8.2",
     "next": "12.1.6",
     "react": "18.1.0",
